@@ -1,0 +1,2 @@
+WARNING, name '  John   Doe  ' contains leading and trailing spaces, that is not permitted in names
+WARNING, name '  John   Doe  ' contains leading and trailing spaces, that is not permitted in names
