@@ -9,6 +9,8 @@ cod-tools (unreleased)
       - reporting of missing parent data items;
       - the --allow-double-precision-notation and
         --no-allow-double-precision-notation options.
+    - COD::AuthorNames:
+      - author_names_are_the_same() subroutine.
     - COD::CIF::DDL::DDL1:
       - the get_list_constraint_type() and get_dic_item_value() subroutines.
   * Changed:
